# codi-ao

./: .gitignore  COMMONSENSE_ANALYSIS.md  NEW_README.MD  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PLAN.md  README.md  STUDY.md  ao_evaluation.json  evaluation.json  implementation_plan.md  latent_exploration.json  linear_probe_operation.json  main.py  plan.md  progress.md  pyproject.toml
configs/: default.yaml  full.yaml  thin.yaml
new_results/: ao_3step_evaluation.json  ao_3step_evaluation_v2.json  logit_lens_3step.json
references/: activation_oracles.txt  codi.txt  codi_blog.txt
results/: ao_evaluation.json  ao_evaluation_full.json  ao_operands.json  eval_results.json  logit_lens_operation.json
scripts/: 01_download_data.py  02_extract_activations.py  03_generate_qa.py  04_train.py  05_eval.py  analyze_commonsense_latents.py  analyze_rare_values.py  check_commonsense_format.py  collect_latents.py  eval_ao.py  eval_ao_3step.py  eval_ao_all6.py  eval_ao_holdout.py  eval_ao_operands.py  eval_logit_lens.py  eval_logit_lens_3step.py  eval_logit_lens_holdout.py  eval_logit_lens_operation.py  eval_logit_lens_results.py  evaluate.py  explore_gsm8k_latents.py  explore_latents.py  generate_ao_training.py  generate_ao_training_data.py  generate_ao_training_data_3step.py  generate_ao_training_data_all6.py  generate_ao_training_holdout.py  generate_data.py  generate_data_holdout.py  generate_expanded_synthetic.py  generate_phase2_data.py  generate_phase3_data.py  generate_phase4_data.py  generate_synthetic_data.py  parse_gsm8k.py  (+11 more)
(+22 files in other folders)
