[project]
name = "codi-ao"
version = "0.1.0"
description = "Activation Oracle for interpreting CODI's latent reasoning vectors"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "safetensors>=0.4.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.16.0",
    "huggingface-hub>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled separately

[tool.black]
line-length = 100
target-version = ["py310"]
